--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,4 +1,11 @@
-/* latin-ext */
+@font-face {
+  font-family: "Inconsolata";
+  src: url(fonts/inconsolata.woff2) format("woff2"),
+    url(fonts/inconsolata.woff) format("woff");
+}
+
+/*
+/* latin-ext
 @font-face {
   font-family: "Bitter-Regular-400-Latin-Ext";
   font-style: normal;
@@ -9,7 +16,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+/* latin
 @font-face {
   font-family: "Bitter-Regular-400-Latin";
   font-style: normal;
@@ -20,7 +27,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* latin-ext */
+/* latin-ext
 @font-face {
   font-family: "Bitter-Bold-700-Latin-Ext";
   font-style: normal;
@@ -31,7 +38,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+/* latin
 @font-face {
   font-family: "Bitter-Bold-700-Latin";
   font-style: normal;
@@ -42,7 +49,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* latin-ext */
+/* latin-ext
 @font-face {
   font-family: "Bitter-Italic-400-Latin-Ext";
   font-style: italic;
@@ -53,7 +60,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+/* latin
 @font-face {
   font-family: "Bitter-Italic-400-Latin";
   font-style: italic;
@@ -64,7 +71,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* latin-ext */
+/* latin-ext
 @font-face {
   font-family: "Open-Sans-Regular-400-Latin-Ext";
   font-style: normal;
@@ -76,7 +83,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+/* latin
 @font-face {
   font-family: "Open-Sans-Regular-400-Latin";
   font-style: normal;
@@ -88,7 +95,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* latin-ext */
+/* latin-ext
 @font-face {
   font-family: "Open-Sans-Semibold-600-Latin-Ext";
   font-style: normal;
@@ -100,7 +107,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+/* latin
 @font-face {
   font-family: "Open-Sans-Semibold-600-Latin";
   font-style: normal;
@@ -111,7 +118,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
-/* latin-ext */
+/* latin-ext
 @font-face {
   font-family: "Open-Sans-Bold-700-Latin-Ext";
   font-style: normal;
@@ -123,7 +130,7 @@
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 
-/* latin */
+/* latin
 @font-face {
   font-family: "Open-Sans-Bold-700-Latin";
   font-style: normal;
@@ -134,4 +141,4 @@
     url("fonts/Open-Sans-Bold-700-Latin.woff") format("woff");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
-
+*/
