--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -12,7 +12,7 @@ code {
   background: $code-background-color;
   border-radius: 3px;
   color: $code-color;
-  font-size: 85%;
+  font-size: 100%;
   padding: .25em .5em;
   text-shadow: 0 1px #fff;
 }
@@ -33,7 +33,7 @@ pre code {
 .highlight {
   background: $code-background-color;
   border-radius: .25rem;
-  font-size: .85rem;
+  font-size: 1rem;
   line-height: 1.4;
   margin-bottom: 1rem;
   padding: 1rem;
