--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,7 @@
 }
 
 footer {
-  font-family: $secondary-font-family;
+  font-family: $secondary-font-family-semibold;
   font-weight: 600;
   margin: 2rem 0;
   text-align: center;
