--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -137,7 +137,7 @@ div.prism-show-language {
     box-shadow: none;
     color: black;
     display: inline-block;
-    font-family: $secondary-font-family;
+    font-family: $secondary-font-family-semibold;
     font-size: 0.75em;
     font-weight: 600;
     height: auto;
