Added font ruleset

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -52,141 +52,10 @@
   font-weight: 600;
 }
 
-/*
-/* latin-ext
 @font-face {
-  font-family: "Bitter-Regular-400-Latin-Ext";
+  font-family: "OpenSansRegular";
+  src: url(fonts/Open-Sans/OpenSans-Regular.woff2) format("woff2"),
+    url(fonts/Open-Sans/OpenSans-Regular.woff) format("woff");
   font-style: normal;
   font-weight: 400;
-  src: local("Bitter-Regular"),
-    url("fonts/bitter-regular-400-latin-ext.woff2") format("woff2"),
-    url("fonts/bitter-regular-400-latin-ext.woff") format("woff");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
-
-/* latin
-@font-face {
-  font-family: "Bitter-Regular-400-Latin";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Bitter-Regular"),
-    url("fonts/bitter-regular-400-latin.woff2") format("woff2"),
-    url("fonts/bitter-regular-400-latin.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin-ext
-@font-face {
-  font-family: "Bitter-Bold-700-Latin-Ext";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Bitter-Bold"),
-    url("fonts/bitter-bold-700-latin-ext.woff2") format("woff2"),
-    url("fonts/bitter-bold-700-latin-ext.woff") format("woff");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin
-@font-face {
-  font-family: "Bitter-Bold-700-Latin";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Bitter-Bold"),
-    url("fonts/bitter-bold-700-latin.woff2") format("woff2"),
-    url("fonts/bitter-bold-700-latin.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin-ext
-@font-face {
-  font-family: "Bitter-Italic-400-Latin-Ext";
-  font-style: italic;
-  font-weight: 400;
-  src: local("Bitter-Italic"),
-    url("fonts/bitter-bold-700-latin-ext.woff2") format("woff2"),
-    url("fonts/bitter-bold-700-latin-ext.woff") format("woff");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin
-@font-face {
-  font-family: "Bitter-Italic-400-Latin";
-  font-style: italic;
-  font-weight: 400;
-  src: local("Bitter-Italic"),
-    url("fonts/bitter-italic-400-latin.woff2") format("woff2"),
-    url("fonts/bitter-italic-400-latin.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin-ext
-@font-face {
-  font-family: "Open-Sans-Regular-400-Latin-Ext";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Open Sans"),
-    local("OpenSans"),
-    url("fonts/Open-Sans-Regular-400-Latin-Ext.woff2") format("woff2"),
-    url("fonts/Open-Sans-Regular-400-Latin-Ext.woff") format("woff");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin
-@font-face {
-  font-family: "Open-Sans-Regular-400-Latin";
-  font-style: normal;
-  font-weight: 400;
-  src: local("Open Sans"),
-    local("OpenSans"),
-    url("fonts/Open-Sans-Regular-400-Latin.woff2") format("woff2"),
-    url("fonts/Open-Sans-Regular-400-Latin.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin-ext
-@font-face {
-  font-family: "Open-Sans-Semibold-600-Latin-Ext";
-  font-style: normal;
-  font-weight: 600;
-  src: local("Open Sans Semibold"),
-    local("OpenSans-Semibold"),
-    url("fonts/Open-Sans-Semibold-600-Latin-Ext.woff2") format("woff2"),
-    url("fonts/Open-Sans-Semibold-600-Latin-Ext.woff") format("woff");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin
-@font-face {
-  font-family: "Open-Sans-Semibold-600-Latin";
-  font-style: normal;
-  font-weight: 600;
-  src: local("Open Sans Semibold"),
-    url("fonts/Open-Sans-Semibold-600-Latin.woff2") format("woff2"),
-    url("fonts/Open-Sans-Semibold-600-Latin.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
-/* latin-ext
-@font-face {
-  font-family: "Open-Sans-Bold-700-Latin-Ext";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Open Sans Bold"),
-    local("OpenSans-Bold"),
-    url("fonts/Open-Sans-Bold-700-Latin-Ext.woff2") format("woff2"),
-    url("fonts/Open-Sans-Bold-700-Latin-Ext.woff") format("woff");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-
-/* latin
-@font-face {
-  font-family: "Open-Sans-Bold-700-Latin";
-  font-style: normal;
-  font-weight: 700;
-  src: local("Open Sans Bold"),
-    local("OpenSans-Bold"),
-    url("fonts/Open-Sans-Bold-700-Latin.woff2") format("woff2"),
-    url("fonts/Open-Sans-Bold-700-Latin.woff") format("woff");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-*/
