--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -29,7 +29,15 @@
     li {
       display: inline-block;
       list-style: none;
-      margin: 0 .75em;
+      margin: 0 1rem;
+      
+      &:first-child {
+        margin-left: 0;
+      }
+      
+      &:last-child {
+        margin-rightt: 0;
+      }
     }
 
     a {
