--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,7 +5,6 @@
 
 .page,
 .post {
-  margin-bottom: 3em;
 
   li + li {
     margin-top: .25rem;
@@ -38,6 +37,7 @@
   display: inline-block;
   font-family: $secondary-font-family-semibold;
   font-weight: 600;
+  line-height: 1;
   margin: 0 1rem 1rem 0;
   
   time {
