--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,12 @@
           <ul>
             <li class="title">
               <h3 class="masthead-title">
-                <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+                <a href="{{ site.baseurl }}/">{{ site.title }}</a>
               </h3>
             </li>
-            <li><a href="{{ site.baseurl }}/" title="Blog">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/about" title="About">About</a></li>
-            <li><a href="{{ site.baseurl }}/contact" title="Contact">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/about">About</a></li>
+            <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
           </ul>
         </nav>
         <small>Web Dev, Mobile Strategist, Front-End Astronaut</small>
