--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -15,6 +15,7 @@
   border: 1px solid $white-sand;
   border-width: 1px 0;
   display: block;
+  font-family: $secondary-font-family-semibold;
   padding: 1rem;
 
   &:first-child {
