--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,20 +5,9 @@ layout: default
 <article class="post" tabindex="0">
  
   <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-date">
-    <span class="fa fa-clock-o"></span>
-    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
-  </div>
-  {% if page.tags.size > 0 %}
-    <div class="post-tags">
-      <span class="fa fa-tags"></span>
-      <ul>
-        {% for tag in page.tags %}
-          <li><a href="/tags#{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
-        {% endfor %}
-      </ul>
-    </div>
-  {% endif %}
+  
+  {% include post-metadata.html %}
+
   {{ content }}  
 </article>
 
