--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,7 @@ $gray-2: #ccc;
 $gray-3: #939393;
 $gray-4: #767676;
 $gray-5: #515151;
-$gray-5: #313131;
+$gray-6: #313131;
 
 $red: #ac4142;
 $orange: #d28445;
@@ -21,7 +21,7 @@ $root-font-family-bolditalic: "BitterBoldItalic", serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
-$body-color: #515151;
+$body-color: $gray-5;
 $body-bg: #fff;
 $secondary-font-family-bold: "OpenSansBold", sans-serif;
 $secondary-font-family-semibold: "OpenSansSemibold", sans-serif;
