--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -53,6 +53,16 @@
         fill: $blue;
       }
     }
+         
+    span {
+      border: none;
+      clip: rect(0 0 0 0);
+      height: 1px;
+      overflow: hidden;
+      padding: 0;
+      position: absolute;
+      width: 1px;
+    }
 
     svg {
       transition: ease .2s;
