--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+<!--#if expr="$HTTP_COOKIE=/fonts\-loaded\=true/" -->
+<html lang="en" class="fonts-loaded">
+<!--#else -->
 <html lang="en">
+<!--#endif -->
 
   {% include head.html %}
 
@@ -34,6 +38,8 @@
       </footer>
     </div>
     
+    <script src="{{ site.baseurl }}/js/fontfaceobserver.min.js" async></script>
+    <script src="{{ site.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}" async></script>
     <script src="{{ site.baseurl }}/js/prism.js?v={{ site.time | date: '%s' }}" async></script>
     <script async>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
