--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>{{ page.tag }}</h1>
+<h1>Tag: {{ page.tag }}</h1>
 
 <section class="tags">
   {% for post in site.tags[page.tag] %}
