--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -1,14 +1,16 @@
 <div class="post-date">
   <svg class="icon" width="20" height="20" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1024 544v448q0 14-9 23t-23 9h-320q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h224v-352q0-14 9-23t23-9h64q14 0 23 9t9 23zm416 352q0-148-73-273t-198-198-273-73-273 73-198 198-73 273 73 273 198 198 273 73 273-73 198-198 73-273zm224 0q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"/></svg>
-    
-  <time datetime="{% if page.path contains '_posts' %}
-    {{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
-  {% else %}
-    {{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %-d, %Y" }}</time>{% endif %}
+
+  {% if page.path contains '_posts' %}
+    <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time>
+  {% endif %}
+  {% if post.path contains '_posts' %}
+    <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%b %-d, %Y" }}</time>
+  {% endif %}
+
 </div>
 
 {% if page.path contains '_posts' or post.path contains '_posts' %}
-
   <div class="post-tags">
     {% if page.tags.size > 0 or post.tags.size > 0 %}
   
@@ -16,11 +18,11 @@
 
        <ul>
         {% for tag in page.tags %}
-          <li><a href="/tags#{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+          <li><a href="/tags/{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
         {% endfor %}
         
         {% for tag in post.tags %}
-          <li><a href="/tags#{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+          <li><a href="/tags/{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
         {% endfor %}
       </ul>
     {% endif %}
