--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -18,11 +18,11 @@
 
        <ul>
         {% for tag in page.tags %}
-          <li><a href="/tags/#{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+          <li><a href="/tags/{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
         {% endfor %}
         
         {% for tag in post.tags %}
-          <li><a href="/tags/#{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
+          <li><a href="/tags/{{ tag | url_encode }}">{{ tag }}</a>{% if forloop.last == false %},{% endif %}</li>
         {% endfor %}
       </ul>
     {% endif %}
