Fixed font styling 🦌

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -13,6 +13,7 @@ code {
   border-radius: 3px;
   color: $code-color;
   font-size: 100%;
+  font-style: normal;
   padding: .25em .5em;
   text-shadow: 0 1px #fff;
 }
