--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     {% endif %}
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Matt Smith is a web developer who builds web applications to deliver engaging user experiences.">
+  <meta name="description" content="Matt Smith is a Maine-based web developer who builds web applications to deliver engaging user experiences.">
   
   {% if page.url %}
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
