--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
       </main>
 
       <footer role="contentinfo">
+        {% include social-channels.html %}
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> Matt Smith. All rights reserved.
         </small>
