--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -16,11 +16,11 @@
 }
 
 .social {
-  display: table;
   margin: 0 auto;
   
   ul {
-    margin: 1rem 0;
+    display: inline-block;
+    margin-bottom: 1.5rem;
     padding: 0;
 
     li {
