Added previous-next buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,8 @@ layout: default
   {{ content }}  
 </article>
 
+{% include prev-next.html %}
+
 {% include share-page.html %}
 
 {% include comments.html %}
