--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,6 @@ layout: default
 
 {% include share-page.html %}
 
-{% include prev-next.html %}
+{% include pagination.html %}
 
 {% include comments.html %}
