--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,17 +54,21 @@
   <meta name="twitter:site" content="@allthingssmitty">
   <meta name="twitter:creator" content="@allthingssmitty">
   <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/img/public/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="144X144"  href="{{ site.baseurl }}/img/public/android-icon-144x144.png">
+  <link rel="apple-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-icon-152x152.png">
+  <link rel="apple-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png">    
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/public/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-touch-icon-152x152.png"> 
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/android-icon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/favicon-16x16.png" sizes="16x16">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png">
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#268bd2">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/img/public/ms-icon-144x144.png">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}">
-  
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
 </head>
