--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,11 +63,11 @@
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/favicon-96x96.png" sizes="96x96">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png?v={{ site.time | date: '%s' }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png?v={{ site.time | date: '%s' }}">
+  <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png?v={{ site.time | date: '%s' }}">
   <link rel="manifest" href="manifest.json">
-  <meta name="msapplication-TileColor" content="#268bd2">
+  <meta name="msapplication-TileColor" content="#111111">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/img/public/ms-icon-144x144.png">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
