--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,12 +54,12 @@
   <meta name="twitter:site" content="@allthingssmitty">
   <meta name="twitter:creator" content="@allthingssmitty">
   <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
-  <link rel="apple-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-icon-152x152.png">
-  <link rel="apple-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png">    
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/public/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-touch-icon-152x152.png"> 
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/android-icon-192x192.png" sizes="192x192">
+  <link rel="apple-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-icon-152x152.png?v={{ site.time | date: '%s' }}">
+  <link rel="apple-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png?v={{ site.time | date: '%s' }}">    
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/public/apple-touch-icon-120x120.png?v={{ site.time | date: '%s' }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-touch-icon-144x144.png?v={{ site.time | date: '%s' }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-touch-icon-152x152.png?v={{ site.time | date: '%s' }}"> 
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/android-icon-192x192.png?v={{ site.time | date: '%s' }}" sizes="192x192">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png?v={{ site.time | date: '%s' }}">
