--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -84,7 +84,7 @@ body {
  */
 
 a {
-  background: transparent;
+  background-color: transparent;
 }
 
 /**
@@ -156,7 +156,7 @@ hr {
  */
 
 mark {
-  background: #ff0;
+  background-color: #ff0;
   color: #000;
 }
 
