--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background: $body-bg;
+  background-color: $body-bg;
   color: $body-color;
   font-family: serif;
   -webkit-text-size-adjust: 100%;
@@ -48,15 +48,15 @@ a {
   }
    
   code {
-    background: none;
-    padding: 0 .15em;
+    background-color: none;
+    padding: 0 .15rem;
   }
 }
 
 img {
   border-radius: 5px;
   display: block;
-  margin: 0 0 1rem;
+  margin-bottom: 1rem;
   max-width: 100%;
 }
 
@@ -80,7 +80,7 @@ th {
 
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background: #f9f9f9;
+  background-color: #f9f9f9;
 }
 
 b,
