--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -9,12 +9,12 @@ pre {
 }
 
 code {
-  background: $code-background-color;
+  background-color: $code-background-color;
   border-radius: 3px;
   color: $code-color;
   font-size: 100%;
   font-style: normal;
-  padding: .25em .5em;
+  padding: .25rem .5rem;
   text-shadow: 0 1px #fff;
 }
 
@@ -24,7 +24,7 @@ pre {
 }
 
 pre code {
-  background: transparent;
+  background-color: transparent;
   color: inherit;
   font-size: 100%;
   padding: 0;
@@ -32,7 +32,7 @@ pre code {
 
 // Pygments via Jekyll
 .highlight {
-  background: $code-background-color;
+  background-color: $code-background-color;
   border-radius: .25rem;
   font-size: 1rem;
   line-height: 1.4;
@@ -68,7 +68,7 @@ pre code {
 // }
 // .gist pre {
 //   padding: 0;
-//   background: transparent;
+//   background-color: transparent;
 // }
 // .gist .gist-file .gist-data {
 //   font-size: .8rem !important;
@@ -77,6 +77,6 @@ pre code {
 // .gist code {
 //   padding: 0;
 //   color: inherit;
-//   background: transparent;
+//   background-color: transparent;
 //   border-radius: 0;
 // }
