--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -25,7 +25,7 @@
 
 // Only provide a hover state for linked pagination items
 a.pagination-item:hover {
-  background: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 @media (min-width: 30em) {
