--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,17 +1,17 @@
-.highlight .hll { background: #ffc; }
+.highlight .hll { background-color: #ffc; }
 .highlight .c { color: #999; } /* Comment */
-.highlight .err { background: #faa; color: #a00; } /* Error */
+.highlight .err { background-color: #faa; color: #a00; } /* Error */
 .highlight .k { color: #069; } /* Keyword */
 .highlight .o { color: #555 } /* Operator */
 .highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #099 } /* Comment.Preproc */
 .highlight .c1 { color: #999; } /* Comment.Single */
 .highlight .cs { color: #999; } /* Comment.Special */
-.highlight .gd { background: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
+.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
 .highlight .ge { font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #f00 } /* Generic.Error */
 .highlight .gh { color: #030; } /* Generic.Heading */
-.highlight .gi { background: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
+.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
 .highlight .go { color: #aaa } /* Generic.Output */
 .highlight .gp { color: #009; } /* Generic.Prompt */
 .highlight .gs { } /* Generic.Strong */
