--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
     <script src="{{ site.baseurl }}/js/fontfaceobserver.min.js" async></script>
     <script src="{{ site.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}" async></script>
     <script src="{{ site.baseurl }}/js/prism.js?v={{ site.time | date: '%s' }}" async></script>
+    <script id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js" async></script>
     <script async>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
