--- a/_includes/post-metadata.html
+++ b/_includes/post-metadata.html
@@ -36,9 +36,9 @@
   {% include icons/comments.svg %}
  
   {% if page.path contains '_posts' %}
-    <a href="{{ site.baseurl }}{{ page.url }}#disqus_thread">comments</a>
+    <a href="{{ site.baseurl }}{{ page.url }}#disqus_thread" title="Comment on {{ page.title }}">Comments</a>
   {% endif %}
   {% if post.path contains '_posts' %}
-    <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread">comments</a>
+    <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread" title="Comment on {{ post.title }}">Comments</a>
   {% endif %}
 </div>
