Fixed for improved accessibility

--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,7 +3,7 @@ layout: default
 title: Tags
 ---
 
-<h1>Tag: {{ page.tag }}</h1>
+<h2 class="page-title">Tag: {{ page.tag }}</h2>
 
 <section class="tags">
   {% for post in site.tags[page.tag] %}
