--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -5,9 +5,13 @@
 
 // Blog post or page title
 .page-title,
-.post-title,
-.post-title a {
-  color: #303030;
+.post-title {
+  font-size: 2rem;
+  margin-top: 0;
+
+  a {
+    color: $gray-6;  
+  } 
 }
 
 .post-title a {
@@ -15,11 +19,6 @@
   &:hover {
     color: $link-color;
   }
-}
-
-.page-title,
-.post-title {
-  margin-top: 0;
 }
 
 // Meta data line below post title
