--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -132,7 +132,7 @@ div.prism-show-language {
  
   .prism-show-language-label {
     background-color: #cfcfcf;
-    border-radius: 0 0 0 5px;
+    border-radius: 0 .25rem;
     bottom: auto;
     box-shadow: none;
     color: black;
