--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -2,6 +2,8 @@
   font-family: "Inconsolata";
   src: url(fonts/Inconsolata/Inconsolata.woff2) format("woff2"),
     url(fonts/Inconsolata/Inconsolata.woff) format("woff");
+  font-style: normal;
+  font-weight: 400;  
 }
 
 @font-face {
