--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -80,7 +80,7 @@ th {
 
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
-  background-color: #f9f9f9;
+  background-color: $gray-1;
 }
 
 b,
