--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -34,4 +34,4 @@ $large-font-size: 20px;
 
 $code-font-family: "Inconsolata", monospace;
 $code-color: #905;
-$code-background-color: #f9f9f9;
+$code-background-color: $gray-1;
