Fixed to use variable

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -4,7 +4,7 @@
 // there are no more previous or next posts to show.
 
 .pagination {
-  color: #ccc;
+  color: $gray-3;
   margin: 1.5rem -1.5rem;
   overflow: hidden; // clearfix
   text-align: center;
