Display comment count on small screens

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -54,9 +54,9 @@
     margin-left: .25em;
   }
 
-  @media (max-width: $large-breakpoint) {
-    display: none;
-  }
+  //@media (max-width: $large-breakpoint) {
+  //  display: none;
+  //}
 }
 
 .more {
