--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -3,6 +3,13 @@
 // Each post is wrapped in `.post` and is used on default and post layouts. Each
 // page is wrapped in `.page` and is only used on the page layout.
 
+.post {
+  a {
+    text-decoration: underline;  
+  } 
+}
+
+
 // Blog post or page title
 .page-title,
 .post-title {
