--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -6,7 +6,7 @@
 .post {
   a {
     text-decoration: underline;  
-  } 
+  }
 }
 
 
@@ -17,7 +17,8 @@
   margin-top: 0;
 
   a {
-    color: $gray-6;  
+    color: $gray-6;
+    text-decoration: none;
   } 
 }
 
