--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -54,10 +54,10 @@
   font-weight: 600;
 }
 
-@font-face {
-  font-family: "OpenSansRegular";
-  src: url(fonts/Open-Sans/OpenSans-Regular.woff2) format("woff2"),
-    url(fonts/Open-Sans/OpenSans-Regular.woff) format("woff");
-  font-style: normal;
-  font-weight: 400;
-}
+//@font-face {
+//  font-family: "OpenSansRegular";
+//  src: url(fonts/Open-Sans/OpenSans-Regular.woff2) format("woff2"),
+//    url(fonts/Open-Sans/OpenSans-Regular.woff) format("woff");
+//  font-style: normal;
+//  font-weight: 400;
+//}
