--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,9 @@
     
     <script async src="{{ site.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"></script>
     <script async src="{{ site.baseurl }}/js/prism.js?v={{ site.time | date: '%s' }}"></script>
-    <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
+    {% if page.path contains '_posts' %}
+      <script async id="dsq-count-scr" src="//allthingssmitty-com.disqus.com/count.js"></script>
+    {% endif %}
     <script async>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
