--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -1,18 +1,23 @@
-<section class="share">
+<section class="social">
   <h4>Share this post</h4>
-
-  <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" onclick="window.open(this.href, 'twitter share', 'height=235,width=550');return false;">
-    {% include icons/twitter.svg %}    
-    <span>Share on Twitter</span>
-  </a>
-
-  <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" onclick="window.open(this.href,'facebook-share', 'height=296,width=580');return false;">
-    {% include icons/facebook-official.svg %}
-    <span>Share on Facebook</span>
-  </a>
-
-  <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" onclick="window.open(this.href,'google-plus-share', 'height=490,width=530');return false;">
-    {% include icons/google-plus.svg %}
-    <span>Share on Google Plus</span>
-  </a>
+  <ul>
+    <li>
+      <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" onclick="window.open(this.href, 'twitter share', 'height=235,width=550');return false;">
+      {% include icons/twitter.svg %}    
+        <span>Share on Twitter</span>
+      </a>
+    </li>
+    <li>
+      <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" onclick="window.open(this.href,'facebook-share', 'height=296,width=580');return false;">
+        {% include icons/facebook-official.svg %}
+        <span>Share on Facebook</span>
+      </a>      
+    </li>
+    <li>
+      <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" onclick="window.open(this.href,'google-plus-share', 'height=490,width=530');return false;">
+        {% include icons/google-plus.svg %}
+        <span>Share on Google Plus</span>
+      </a>
+    </li>
+  </ul>
 </section>
