--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -47,6 +47,7 @@
     color: $gray-3;
     display: block;
     font-family: $secondary-font-family-semibold;
+    font-size: 85%;
     margin-top: .5rem;
     text-transform: uppercase;
     
