--- a/_sass/_prism.scss
+++ b/_sass/_prism.scss
@@ -7,7 +7,7 @@
 
 code[class*="language-"],
 pre[class*="language-"] {
-  background-color: none;
+  background-color: transparent;
   color: black;
   font-family: $code-font-family;
   -webkit-hyphens: none;
