--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,6 +22,7 @@ body {
   color: $body-color;
   font-family: serif;
   -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-size-adjust: 100%;
 }
