--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,18 +54,14 @@
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
-  <link rel="apple-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-icon-152x152.png?v={{ site.time | date: '%s' }}">
-  <link rel="apple-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png?v={{ site.time | date: '%s' }}">    
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/public/apple-touch-icon-120x120.png?v={{ site.time | date: '%s' }}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-touch-icon-144x144.png?v={{ site.time | date: '%s' }}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-touch-icon-152x152.png?v={{ site.time | date: '%s' }}"> 
-  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/public/android-icon-192x192.png?v={{ site.time | date: '%s' }}" sizes="192x192">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png?v={{ site.time | date: '%s' }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-touch-icon.png?v={{ site.time | date: '%s' }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png?v={{ site.time | date: '%s' }}">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png?v={{ site.time | date: '%s' }}">
-  <link rel="manifest" href="manifest.json">
-  <meta name="msapplication-TileColor" content="#111111">
-  <meta name="msapplication-TileImage" content="{{ site.baseurl }}/img/public/ms-icon-144x144.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png?v={{ site.time | date: '%s' }}">
+  <link rel="manifest" href="{{ site.baseurl }}/img/public/manifest.json">
+  <link rel="mask-icon" href="{{ site.baseurl }}/img/public/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/img/public/favicon.ico?v={{ site.time | date: '%s' }}">
+  <meta name="msapplication-config" content="{{ site.baseurl }}/img/public/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css?v={{ site.time | date: '%s' }}"> 
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
 </head>
