--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
           </ul>
         </nav>
-        <small>Web Dev, Mobile Strategist, Front-End Astronaut</small>
+        <small>{{ site.tagline }}</small>
       </header>
 
       <main id="content" role="main">
