--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,6 +35,7 @@ body {
 a {
   color: $link-color;
   text-decoration: none;
+  text-decoration-skip: ink;
   transition: color ease .2s;
 
   // `:focus` is linked to `:hover` for basic accessibility
