--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,6 +21,11 @@ body {
   background-color: $body-bg;
   color: $body-color;
   font-family: serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
