--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Matt Smith is a Portland, Maine-based web developer who builds applications to deliver engaging user interactions and experiences.">
+  <meta name="description" content="Matt Smith is a Maine-based web developer who builds applications to deliver engaging user interactions and experiences.">
   
   {% if page.url %}
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
