Added border variable

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,6 +28,7 @@ $secondary-font-family-semibold: "OpenSansSemibold", sans-serif;
 
 $link-color: $blue;
 $border-color: #e5e5e5;
+$border-color-blue: $link-color;
 
 $large-breakpoint: 38em;
 $large-font-size: 20px;
