--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -82,7 +82,7 @@ blockquote {
   }
 
   @media (min-width: 30em) {
-    margin: 1.5rem -1.75rem
+    margin: 1.5rem -1.75rem;
     padding: 1rem 1.25rem;
   }
 }
