--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -81,8 +81,11 @@ blockquote {
     margin-bottom: 0;
   }
 
-  @media (min-width: 30em) {
+  @media (min-width: 53.125em) {
     margin: 1.5rem -1.75rem;
+  }
+  
+  @media (min-width: 30em) {
     padding: 1rem 1.25rem;
   }
 }
