--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,7 @@ $cyan: #75b5aa;
 $blue: #0074d9;
 $brown: #8f5536;
 $white-sand: #eee;
+$sky-blue: #f9fbff;
 
 $root-font-family-regular: "BitterRegular", serif;
 $root-font-family-bold: "BitterBold", serif;
