--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -72,7 +72,7 @@ abbr {
 }
 
 blockquote {
-  background-color: #f9fbff;
+  background-color: $sky-blue;
   border-left: .5rem solid $border-color-blue;
   color: $gray-4;
   margin: .8rem 0;
