--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -1,4 +1,4 @@
-<aside class="recent">
+<aside class="recent" role="complementary">
   <h3>Recent posts</h3>
   <ul class="recent-posts">
     {% for post in site.posts limit:3 %}
