--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,5 +1,5 @@
 {% if site.related_posts != empty %}
-<aside class="related">
+<aside class="related" role="complementary">
   <h3>Related posts</h3>
   <ul class="related-posts">
     {% for post in site.related_posts limit:2 %}
