Updated to use root em

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -52,14 +52,14 @@
 
 .post-date {
   time {
-    margin-left: .25em;
+    margin-left: .25rem;
   }
 }
 
 .post-comments {
   
   a {
-    margin-left: .25em;
+    margin-left: .25rem;
   }
 
   //@media (max-width: $large-breakpoint) {
