--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -76,7 +76,7 @@
 
   a {
     background-color: #fff;
-    color: #454545;
+    color: $gray-5;
     left: -500px;
     overflow: hidden;
     position: absolute;
