Used color variable

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -75,7 +75,7 @@
   }
 
   a {
-    background-color: #fff;
+    background-color: $white;
     color: $gray-5;
     left: -500px;
     overflow: hidden;
