--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -14,7 +14,7 @@ code {
   color: $code-color;
   font-style: normal;
   padding: .25rem .5rem;
-  text-shadow: 0 1px #fff;
+  text-shadow: 0 1px $white;
 }
 
 pre {
