--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -53,7 +53,7 @@ dd {
 
 hr {
   border: 0;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid $white;
   border-top: 1px solid $white-sand;
   margin: 1.5rem 0;
   position: relative;
@@ -123,7 +123,7 @@ a[href^="#fnref:"] {
 
 // List of footnotes
 .footnotes {
-  font-size: 85%;
+  font-size: .9rem;
   margin-top: 2rem;
 }
 
