--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,6 +14,7 @@ $blue: #0074d9;
 $brown: #8f5536;
 $white-sand: #eee;
 $sky-blue: #f9fbff;
+$white: #fff;
 
 $root-font-family-regular: "BitterRegular", serif;
 $root-font-family-bold: "BitterBold", serif;
@@ -23,7 +24,6 @@ $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: $gray-5;
-$body-bg: #fff;
 $secondary-font-family-bold: "OpenSansBold", sans-serif;
 $secondary-font-family-semibold: "OpenSansSemibold", sans-serif;
 
